--- a/mua.html
+++ b/mua.html
@@ -6,7 +6,7 @@
     <title>MUA - Gestão Acadêmica Inteligente</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="shortcut icon" href="imagens/logo-favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="./mua.css">
+    <link rel="stylesheet" href="./css/mua.css">
 </head>
 <body>
     <!-- Navbar -->
