--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MUA - Gestão Acadêmica Inteligente</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="shortcut icon" href="imagens/logo-favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./css/img/logo-favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/mua.css">
 </head>
 <body>
